# pymae

./: .gitignore  CMakeLists.txt  Makefile  README.md
pymae/: main.cpp
pymae/pybind/: PythonStreambuf.cpp  PythonStreambuf.hpp  block_bindings.cpp  block_bindings.hpp  iblock_bindings.cpp  iblock_bindings.hpp  module.cpp  reader_bindings.cpp  reader_bindings.hpp  utils.hpp  writer_bindings.cpp  writer_bindings.hpp
